--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
         "entry": "src/index.js"
     },
     "scripts": {
-        "package": "esbuild $npm_package_config_entry --bundle --platform=browser --outfile=bundle.js --global-name=pp",
+        "bundle": "esbuild $npm_package_config_entry --bundle --platform=browser --outfile=bundle.js --global-name=pp",
+        "package": "esbuild $npm_package_config_entry --bundle --platform=browser --outfile=bundle.js --global-name=pp --minify",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "@helia/ipns": "^9.1.3",
         "@helia/verified-fetch": "^4.0.1",
+        "@libp2p/http": "^2.0.1",
+        "@multiformats/multiaddr": "^13.0.1",
+        "helia": "^6.0.8",
         "multiformats": "^13.4.1"
     }
 }
