--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dependencies": {
         "@helia/ipns": "^9.1.3",
         "@helia/verified-fetch": "^4.0.1",
+        "@libp2p/crypto": "^5.1.13",
         "@libp2p/http": "^2.0.1",
+        "@libp2p/peer-id": "^6.0.4",
         "@multiformats/multiaddr": "^13.0.1",
         "helia": "^6.0.8",
         "multiformats": "^13.4.1"
