--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@libp2p/http": "^2.0.1",
         "@libp2p/peer-id": "^6.0.4",
         "@multiformats/multiaddr": "^13.0.1",
+        "@noble/post-quantum": "^0.5.2",
         "helia": "^6.0.8",
         "multiformats": "^13.4.1"
     }
