--- a/package.json
+++ b/package.json
@@ -13,8 +13,19 @@
     "license": "MIT",
     "author": "",
     "type": "module",
-    "main": "src/index.ts",
-    "types": "src/index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
+            "default": "./dist/index.js"
+        }
+    },
+    "files": [
+        "dist",
+        "src"
+    ],
     "config": {
         "entry": "src/index.ts"
     },
@@ -38,6 +49,7 @@
     },
     "devDependencies": {
         "@types/node": "^25.0.3",
+        "esbuild": "^0.19.0",
         "typescript": "^5.9.3"
     }
 }
